Fixed text overflow of project tile

--- a/Portfoliov2.css
+++ b/Portfoliov2.css
@@ -194,9 +194,9 @@ flex-direction: column;
 
 .tile-text {
 	position: absolute;
-	top: 100px;
+	top: 80px;
     bottom: 0;
-    left: 100px;
+    left: 80px;
     right: 0;
     color: #4ABDAC; /*#FFFAFA*/
     font-size: 125%;
@@ -227,12 +227,12 @@ flex-direction: column;
 
 .tile-text {
 	position: absolute;
-	top: 120px;
+	top: 100px;
     bottom: 0;
-    left: 70px;
+    left: 35px;
     right: 0;
     color: #4ABDAC; /*#FFFAFA*/
-    font-size: 150%;
+    font-size: 130%;
 }
 
 }
